# SSH-MEFrp-Launcher

./: .gitignore  LICENSE  README.md  docs.md  install.sh  onekeyinstall.sh  pyproject.toml  requirements.txt  setup.py
sml/: __init__.py  __main__.py  app.py  installer.py
sml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
sml/api/: __init__.py  client.py
sml/manager/: config.py  systemd.py
sml/ui/: __init__.py  login_screen.py  lottery_screen.py  main_screen.py  paste_screen.py  register_screen.py  settings_screen.py  signin_screen.py  tunnel_create_screen.py  tunnel_detail_screen.py  tunnel_list_screen.py
sml/utils/: captcha.py  clipboard.py  helpers.py
tests/: test_api_captcha.py  test_captcha.py
